--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -16,18 +15,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Gopns</h1>
-        <p class="header">Gopher Push Notification Service</p>
+        <h1>Gopns</h1>
+        <p>Gopher Push Notification Service</p>
+
+        <p class="view"><a href="https://github.com/gopns/gopns">View the Project on GitHub <small>gopns/gopns</small></a></p>
+
 
         <ul>
-          <li class="download"><a class="buttons" href="https://github.com/gopns/gopns/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/gopns/gopns/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/gopns/gopns">View On GitHub</a></li>
+          <li><a href="https://github.com/gopns/gopns/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/gopns/gopns/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/gopns/gopns">View On <strong>GitHub</strong></a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/gopns">gopns</a></p>
-
-
       </header>
       <section>
         <p><img src="http://i.imgur.com/XVfdzlQ.png" alt="Gohper"></p>
@@ -69,10 +67,11 @@ gopns
 </ul>
       </section>
       <footer>
-        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p>This project is maintained by <a href="https://github.com/gopns">gopns</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+    <script src="javascripts/scale.fix.js"></script>
+    
   </body>
 </html>
